# dHEX

./: README.md  pyproject.toml
main/: urls.py  views.py
server/: dev.py  settings.py
static/js/: _include.js  script.js
static/styles/: style.css
templates/: elements.html  index.html
